--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "sucrase-node src/main/server.ts",
+    "start": "node dist/main/server.js",
+    "build": "rimraf dist && tsc",
+    "dev": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verboso": "jest --passWithNoTests",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -37,6 +39,7 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "mongodb-memory-server": "^6.5.1",
+    "rimraf": "^3.0.2",
     "sucrase": "^3.17.0",
     "supertest": "^6.1.1",
     "ts-jest": "^26.4.4",
@@ -45,7 +48,6 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
-    "fast-glob": "^3.2.5",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongodb-memory-server": "^6.5.1",
