--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,14 @@ services:
     restart: always
     # working_dir: /usr/src/esk-clean-node-api
     # command: bash -c "npm install --only=prod && npm run debug"
-    command: npm start
+    command: npm run debug
     # environment:
       # - MONGO_URL=mongodb://mongo:27017/esk-clean-node-api
     volumes:
       - ./dist/:/usr/src/esk-clean-node-api/dist/
-      # - ./package.json:/usr/src/esk-clean-node-api/package.json
+      - ./package.json:/usr/src/esk-clean-node-api/package.json
     ports:
       - "5050:5050"
-      # - "9222:9222"
+      - "9222:9222"
     links:
       - mongo
