--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
+    "mockdate": "^3.0.2",
     "mongodb-memory-server": "^6.9.3",
     "rimraf": "^3.0.2",
     "sucrase": "^3.17.1",
