--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     restart: always
     working_dir: /usr/src/esk-clean-node-api
     command: bash -c "npm install --only=prod && npm run debug"
-    # environment:
-      # - MONGO_URL=mongodb://mongo:27017/esk-clean-node-api
+    environment:
+      - MONGO_URL=mongodb://mongo:27017/esk-clean-node-api
     volumes:
       - ./dist/:/usr/src/esk-clean-node-api/dist/
       - ./package.json:/usr/src/esk-clean-node-api/package.json
