--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.22",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "coveralls": "^3.1.0",
@@ -58,12 +59,13 @@
     "module-alias": "^2.2.2",
     "mongodb": "^3.6.3",
     "nodemon": "^2.0.7",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.5.2"
   },
   "engines": {
     "node": "12.x"
   },
   "_moduleAliases": {
-    "@"      : "dist"
+    "@": "dist"
   }
 }
