chore: update packages

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "postbuild": "copyfiles -u 1 public/**/* dist/static",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
+    "check": "npm-check -s -u",
     "up": "npm run build && docker-compose up -d",
     "down": "docker-compose down",
     "dev": "sucrase-node src/main/server.ts",
@@ -30,32 +31,32 @@
     "@types/faker": "^5.1.7",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongodb": "^3.6.3",
-    "@types/node": "^14.14.22",
+    "@types/mongodb": "^3.6.8",
+    "@types/node": "^14.14.31",
     "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.3",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
     "copyfiles": "^2.4.1",
     "coveralls": "^3.1.0",
-    "eslint": "^7.19.0",
-    "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint": "^7.20.0",
+    "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^5.0.0",
     "faker": "^5.4.0",
     "git-commit-msg-linter": "^3.0.0",
-    "husky": "^4.3.8",
+    "husky": "^5.1.1",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^10.5.4",
     "mockdate": "^3.0.2",
     "mongodb-memory-server": "^6.9.3",
     "rimraf": "^3.0.2",
     "sucrase": "^3.17.1",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.1.3"
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.1.5"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -63,8 +64,9 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
-    "mongodb": "^3.6.3",
+    "mongodb": "^3.6.4",
     "nodemon": "^2.0.7",
+    "npm-check": "^5.9.2",
     "swagger-ui-express": "^4.1.6",
     "validator": "^13.5.2"
   },
