--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "module": "commonjs",
-    "target": "es2019",
+    "target": "es2018",
     "strictNullChecks": false,
     "esModuleInterop": true,
     "sourceMap": true,
@@ -12,8 +12,6 @@
       "@/*": ["*"]
     }
   },
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "exclude": []
 }
