--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "rootDirs": ["src", "tests"],
     "baseUrl": "src",
     "paths": {
+      "@/tests/*": ["../tests/*"],
       "@/*": ["*"]
     }
   },
