--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "bson-objectid": "^2.0.1",
     "copyfiles": "^2.4.1",
     "coveralls": "^3.1.0",
     "eslint": "^7.14.0",
