--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "esk-clean-node-api",
   "version": "2.5.6",
-  "description": "NodeJs Rest API using TDD, Clean Architecture and Typescript",
+  "description": "NodeJs Rest API and GraphQL using TDD, Clean Architecture, Typescript and Design Patterns",
   "author": "Edson Shideki Kokado",
   "license": "GPL-3.0-or-later",
   "repository": "github:eskokado/esk-clean-ts-api",
+  "homepage": "https://rmanguinho.github.io",
   "main": "index.js",
   "scripts": {
     "start": "node dist/main/server.js",
